--- a/css/introHCI.css
+++ b/css/introHCI.css
@@ -5,8 +5,12 @@
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
+	/* Colors are in hexadecimal: http://www.colorpicker.com/ */
 	color: #CC00AA;
+}
+
+.project{
+	margin-left: 20px;
 }
 
 /* this style exists to make it obvious that you've successfully linked
@@ -30,5 +34,5 @@ body {
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;
 }
